refactored font names

--- a/src/assets/fonts/Montserrat/fonts.scss
+++ b/src/assets/fonts/Montserrat/fonts.scss
@@ -1,13 +1,13 @@
 @font-face {
 	font-family: 'Montserrat';
-	src: local('☺'), url('fonts/Montserrat-Regular.woff') format('woff'), url('fonts/Montserrat-Regular.ttf') format('truetype'), url('fonts/Montserrat-Regular.svg') format('svg');
+	src: local('☺'), url('fonts/montserrat__regular.woff') format('woff'), url('fonts/montserrat__regular.ttf') format('truetype'), url('fonts/montserrat__regular.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Montserrat';
-	src: local('☺'), url('fonts/Montserrat-Bold.woff') format('woff'), url('fonts/Montserrat-Bold.ttf') format('truetype'), url('fonts/Montserrat-Bold.svg') format('svg');
+	src: local('☺'), url('fonts/montserrat__bold.woff') format('woff'), url('fonts/montserrat__bold.ttf') format('truetype'), url('fonts/montserrat__bold.svg') format('svg');
 	font-weight: bold;
 	font-style: normal;
 }
