--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -1,5 +1,5 @@
-@import '../assets/fonts/Montserrat/fonts.scss';
-@import '../assets/fonts/Quicksand/fonts.scss';
+@import '@fonts/Montserrat/fonts.scss';
+@import '@fonts/Quicksand/fonts.scss';
 
 html,
 body {
