--- a/src/assets/fonts/Quicksand/fonts.scss
+++ b/src/assets/fonts/Quicksand/fonts.scss
@@ -1,13 +1,13 @@
 @font-face {
 	font-family: 'Quicksand';
-	src: local('☺'), url('fonts/Quicksand-Regular.woff') format('woff'), url('fonts/Quicksand-Regular.ttf') format('truetype'), url('fonts/Quicksand-Regular.svg') format('svg');
+	src: local('☺'), url('fonts/quicksand__regular.woff') format('woff'), url('fonts/quicksand__regular.ttf') format('truetype'), url('fonts/quicksand__regular.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Quicksand';
-	src: local('☺'), url('fonts/Quicksand-Bold.woff') format('woff'), url('fonts/Quicksand-Bold.ttf') format('truetype'), url('fonts/Quicksand-Bold.svg') format('svg');
+	src: local('☺'), url('fonts/quicksand__bold.woff') format('woff'), url('fonts/quicksand__bold.ttf') format('truetype'), url('fonts/quicksand__bold.svg') format('svg');
 	font-weight: bold;
 	font-style: normal;
 }
