refactored font names 2

--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -1,5 +1,5 @@
-@import '@fonts/Montserrat/fonts.scss';
-@import '@fonts/Quicksand/fonts.scss';
+@import '@fonts/montserrat/fonts.scss';
+@import '@fonts/quicksand/fonts.scss';
 
 html,
 body {
