--- a/src/components/material-icon-cell/material-icon-cell.scss
+++ b/src/components/material-icon-cell/material-icon-cell.scss
@@ -1,7 +1,7 @@
 @import '@fonts/material-icons/fonts.scss';
 
 .material-icons {
-  font-family: Material Icons;
+  font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
   font-size: 24px;
