Imported new components to input elements

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,6 +1,6 @@
 @import "@variables";
 
-.elem__width {
+%elem__width {
   &_100 {
     width: 320px
   }
@@ -72,12 +72,12 @@
   }
 }
 
-.twins-grid-line {
+%twins-grid-line {
   display: grid;
   grid-template-columns: repeat(2, auto);
   justify-content: start;
 }
 
-.fullscreen-bottom-border {
+%fullscreen-bottom-border {
   border-bottom: 1px solid rgba($valhalla, .25);
 }
