--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -6,6 +6,8 @@ $focused-color_text: rgba($valhalla, .75);
 $focused-color_border-n-icon: rgba($valhalla, .5);
 
 .input {
+  width: 100%;
+
   &__line-array {
     grid-gap: 20px;
   }
