Refactored cards, mean-oval buttons and ui-kit pages: removed all static width relations

--- a/src/components/card/__login/card__login.pug
+++ b/src/components/card/__login/card__login.pug
@@ -18,8 +18,7 @@ mixin cardLogin()
             type: "submit",
             mode: "contained",
             text: "войти",
-            iconname: "arrow_forward",
-            widthbypercent: 100
+            iconname: "arrow_forward"
           }
         ]
       })
