--- a/src/components/card/__registration/card__registration.pug
+++ b/src/components/card/__registration/card__registration.pug
@@ -28,8 +28,7 @@ mixin cardRegistration()
           type: "submit",
           mode: "contained",
           text: "Зарегистрироваться",
-          iconname: "arrow_forward",
-          widthbypercent: 100
+          iconname: "arrow_forward"
         }]
       })
     form.card-registration__login-section( action="website__login.html" )
