Implementing incapsulated styles 2: bullet-list, buttons

--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,6 +1,6 @@
 include /components/title-bar/title-bar.pug
 
 mixin bulletList( texts=[] )
-  .bullet-list 
-    each text in texts 
-      .bullet-list__row.custom-font-style_body #{text}
+  .bullet-list
+    each text in texts
+      .bullet-list__row #{text}
