--- a/src/components/button/__like/button__like.scss
+++ b/src/components/button/__like/button__like.scss
@@ -1,6 +1,7 @@
+@import "@entities/__gradient-filled/entities__gradient-filled.scss";
 @import "@variables";
 @import "../button.scss";
-@import "/src/entities/__gradient-filled/entities__gradient-filled.scss";
+
 
 .like-button {
   display: flex;
