--- a/src/components/button/__toggle/button__toggle.pug
+++ b/src/components/button/__toggle/button__toggle.pug
@@ -3,4 +3,4 @@ mixin toggleButton( item )
 
   .toggle-button 
     input.toggle-button__elem( id=item.id type='checkbox' checked=buttonChecked )
-    label.toggle-button__label.custom-font-style_body( for=item.id ) #{item.label}
+    label.toggle-button__label( for=item.id ) #{item.label}
