--- a/src/components/button/__toggle/button__toggle.scss
+++ b/src/components/button/__toggle/button__toggle.scss
@@ -1,4 +1,5 @@
 @import "@variables";
+@import "@styles/__text/styles__text.scss";
 @import "../button.scss";
 
 .toggle-button {
@@ -33,6 +34,7 @@
   }
 
   &__label {
+    @extend %styles__text_body;
     position: relative;
     top: -2px;
     cursor: pointer;
