Implementing incapsulated styles 3: cards

--- a/src/components/card/__filter/card__filter.pug
+++ b/src/components/card/__filter/card__filter.pug
@@ -32,7 +32,7 @@ mixin cardFilter( item )
           id: item.id + "_slider",
           title: "диапазон цен",
         })
-      span.card-filter__slider-note.custom-font-style_micro-note Стоимость за сутки пребывания в номере
+      span.card-filter__slider-note Стоимость за сутки пребывания в номере
     .card-filter__checkboxes.form-elements__element
       +titleBar("правила дома")
       .checkbox-button__array
