--- a/src/components/card/__filter/card__filter.scss
+++ b/src/components/card/__filter/card__filter.scss
@@ -1,8 +1,16 @@
+@import "@styles/__text/styles__text.scss";
+
 .card-filter {
   display: grid;
   grid-gap: 30px;
 
-  &__slider-frame {
-    margin-bottom: 13px;
+  &__slider {
+    &-frame {
+      margin-bottom: 13px;
+    }
+
+    &-note {
+      @extend %styles__text_micro-note;
+    }
   }
 }
