--- a/src/components/card/__find-room/card__find-room.pug
+++ b/src/components/card/__find-room/card__find-room.pug
@@ -3,11 +3,10 @@ include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin cardFindRoom()
   form.card-find-room.card-style_default( action="website__search.html" )
-    .card-find-room__container_title
-      span.custom-font-style_h1 Найдём номера под ваши пожелания
+    .card-find-room__container-title Найдём номера под ваши пожелания
 
-    .card-find-room__container_date-pickers
-      .card-find-room__date-pickers-row.twins-grid-line
+    .card-find-room__container-date-pickers
+      .card-find-room__date-pickers-row
         +input({
           id: "card-find-room__date-picker_arrival",
           type: "date-picker",
@@ -21,7 +20,7 @@ mixin cardFindRoom()
           hierarchy: "slave",
         })
 
-    .card-find-room__container_guests-dropdown
+    .card-find-room__container-guests-dropdown
       +input({
         type: "dropdown",
         id: "card-find-room__guests",
@@ -32,7 +31,7 @@ mixin cardFindRoom()
         }
       })
 
-    .card-find-room__container_submit-button.card-footer
+    .card-find-room__container-submit-button.card-footer
       +meanOvalButtons({
         groupname: "card-find-room__submit-button",
         buttons: [{
