--- a/src/components/card/__room-booking/card__room-booking.pug
+++ b/src/components/card/__room-booking/card__room-booking.pug
@@ -7,16 +7,16 @@ mixin cardRoomBooking()
     .card-room-booking__container_title-complex
       .card-room-booking__title-complex
         .card-room-booking__title
-          span.card-room-booking__title_prefix.custom-font-style_body-plain #{'№ '}
-          span.card-room-booking__title_room-number.custom-font-style_h1 888
+          span.card-room-booking__title_prefix #{'№ '}
+          span.card-room-booking__title_room-number 888
           span.card-room-booking__title_luxe-mark ЛЮКС
-        .card-room-booking__price.custom-font-style_body-plain
+        .card-room-booking__price
           span.card-room-booking__price_value 9 990
           span.card-room-booking__price_symbol ₽ 
           span.card-room-booking__price_addition в сутки
 
     .card-room-booking__container_date-pickers
-      .card-room-booking__date-pickers-row.twins-grid-line
+      .card-room-booking__date-pickers-row
         +input({
           id: "room-booking__date-picker_arrival",
           type: "date-picker",
@@ -43,7 +43,7 @@ mixin cardRoomBooking()
         }
       })
 
-    .card-room-booking__container_calc.custom-font-style_body
+    .card-room-booking__container_calc
       .card-room-booking__calc-initial-price
         .card-room-booking__sub-container_price
           span 9 990₽ x 4 суток
@@ -63,7 +63,7 @@ mixin cardRoomBooking()
             +materialIcon("info_outline")
           span 300₽
 
-      .card-room-booking__calc-summary.custom-font-style_h2
+      .card-room-booking__calc-summary
         .card-room-booking__sub-container_price
           span Итого
           span.card-room-booking__calc-summary_dotted-border
