--- a/src/entities/__expandable/entities__expandable.scss
+++ b/src/entities/__expandable/entities__expandable.scss
@@ -1,7 +1,7 @@
-.expander_active {
+.js-expander_active {
   visibility: visible !important;
 }
 
-.icon_flipped {
+.js-icon_flipped {
   transform: scaleY(-1);
 }
