--- a/src/components/checkbox-list/checkbox-list.pug
+++ b/src/components/checkbox-list/checkbox-list.pug
@@ -3,17 +3,17 @@ include /components/button/__checkbox/button__checkbox.pug
 include /components/material-icon-cell/material-icon-cell.pug
 
 mixin checkboxList( item )
-  - const iconFlippedClass = item.expanded ? 'icon_flipped' : ''
-  - const expanderActiveClass = item.expanded ? 'expander_active' : ''
+  - const iconFlippedClass = item.expanded ? 'js-icon_flipped' : ''
+  - const expanderActiveClass = item.expanded ? 'js-expander_active' : ''
 
-  .checkbox-list.expander__parent
+  .checkbox-list.js-expander__parent
     .checkbox-list__title
-      input.checkbox-list__title_button.expander( type='checkbox' id=item.groupname checked=item.expanded )
+      input.checkbox-list__title_button.js-expander( type='checkbox' id=item.groupname checked=item.expanded )
       .checkbox-list__title_text
         +titleBar( item.title )
       .checkbox-list__title_icon( class=iconFlippedClass )
         +materialIcon('expand_more', item.groupname)
-    .checkbox-list__items.expander__aim( class=expanderActiveClass )
+    .checkbox-list__items.js-expander__aim( class=expanderActiveClass )
       +checkboxButtons({
         groupname: item.groupname,
         checkboxes: item.checkboxes
