--- a/src/components/input/__date-picker/input__date-picker.pug
+++ b/src/components/input/__date-picker/input__date-picker.pug
@@ -4,6 +4,6 @@ include /components/date-picker/date-picker.pug
 mixin inputDatePicker( item )
   label.input__icon_expand( for=item.id)
     +materialIcon('expand_more', item.id)
-  .input__date-picker.expander__aim( class=item.hierarchy data-dates=item.dates )
+  .input__date-picker.js-expander__aim( class=item.hierarchy data-dates=item.dates )
     if ( item.hierarchy !== 'slave' )
       +datePicker( item.id )
