Major refactoring of expandable entities: changed mob-selectors

--- a/src/components/button/__mean-oval/button__mean-oval.pug
+++ b/src/components/button/__mean-oval/button__mean-oval.pug
@@ -10,7 +10,7 @@ mixin meanOvalButtons( item )
     - const buttonText = button.text || 'click me'
     - const buttonType = button.type || 'button'
     - const isTextMode = button.mode === 'text'
-    - const textButtonClass = isTextMode ? 'mob_non-absolute' : ''
+    - const textButtonClass = isTextMode ? '.js-mean-oval-button_pos-relative' : ''
 
     - let buttonClasses = ''
 
