--- a/src/components/type-sample/type-sample.scss
+++ b/src/components/type-sample/type-sample.scss
@@ -1,4 +1,5 @@
 @import "@variables";
+@import "@styles/__text/styles__text.scss";
 
 .type-sample {
   display: flex;
@@ -21,5 +22,20 @@
     margin-left: 30px;
     width: 369px;
     white-space: pre-line;
+  }
+
+  &__text {
+    &_h1 {
+      @extend %styles__text_h1;
+    }
+    &_h2 {
+      @extend %styles__text_h2;
+    }
+    &_h3 {
+      @extend %styles__text_h3;
+    }
+    &_body {
+      @extend %styles__text_body;
+    }
   }
 }
