--- a/src/components/votes-chart/votes-chart.scss
+++ b/src/components/votes-chart/votes-chart.scss
@@ -1,4 +1,5 @@
 @import "@variables";
+@import "@styles/__text/styles__text.scss";
 
 .votes-chart {
   align-items: flex-end;
@@ -40,6 +41,14 @@
       text-shadow: 0px 2px 2px rgba($valhalla, .33);
       transition: color .8s ease;
     }
+
+    &_votes {
+      @extend %styles__text_h1;
+    }
+
+    &_word {
+      @extend %styles__text_h3;
+    }
   }
 
   &__legend {
@@ -59,6 +68,10 @@
       height: 10px;
       width: 10px;
       margin-right: 5px;
+    }
+
+    &_text {
+      @extend %styles__text_body;
     }
   }
 }
