Renamed modal-window-related selectors, replaced its invisible state selector from header to own stylesheet

--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -8,7 +8,7 @@ block head
 block modal
   include /components/modal-window/modal-window.pug
 
-  .modal-window_filtration.window_invisible
+  .modal-window__filtration.modal-window_invisible
     +modalWindow({
       id: "ejectable-button_filtration-1",
       filters: true
