--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.scss
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.scss
@@ -1,5 +1,6 @@
 @import "@variables";
 @import "@styles/__form/styles__form.scss";
+@import "@styles/__width/styles__width.scss";
 
 .wrap_top {
   margin-top: 3px;
@@ -30,6 +31,30 @@
 
   &__element {
     grid-gap: 16px;
+
+    &-width {
+      &_100 {
+        @extend %styles__width_100;
+      }
+      &_83 {
+        @extend %styles__width_83;
+      }
+      &_81 {
+        @extend %styles__width_81;
+      }
+      &_61 {
+        @extend %styles__width_61;
+      }
+      &_47 { 
+        @extend %styles__width_47;
+      }
+      &_30 {
+        @extend %styles__width_30;
+      }
+      &_27 {
+        @extend %styles__width_27;
+      }
+    }
   }
 }
 
@@ -51,30 +76,6 @@
 
   &_center {
     margin-right: 72px;
-  }
-}
-
-.element__width {
-  &_100 {
-    width: 320px;
-  }
-  &_83 {
-    width: 266px;
-  }
-  &_81 {
-    width: 260px;
-  }
-  &_61 {
-    width: 196px;
-  }
-  &_47 { 
-    width: 150px;
-  }
-  &_30 {
-    width: 99px;
-  }
-  &_27 {
-    width: 87px;
   }
 }
 
