--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -2,9 +2,9 @@ include /components/title-bar/title-bar.pug
 
 mixin rangeSlider( item )
   - const stateId = item.id + '_state'
-  - const widthClass = `elem__width_${ item.widthbypercent }`
+  - const sliderWidth = `width:${ item.widthpx || 320 }px`
 
-  .range-slider__wrap( class=widthClass )
+  .range-slider__wrap( style=sliderWidth )
     +titleBar( item.title, true, stateId )
     .range-slider__container
       .range-slider__elem( id=item.id )
