--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -73,7 +73,7 @@ block main
           id: "uik-fe__semi-wide_01",
           type: "date-picker",
           title: "filter date dropdown",
-          width: "266",
+          widthpx: 266,
           dates: "2019-08-19, 2019-08-23"
         })
       .form-elements__block.block__inputs_subscribe
