Applied new widthpx parameter to cards buttons

--- a/src/components/card/__find-room/card__find-room.pug
+++ b/src/components/card/__find-room/card__find-room.pug
@@ -39,5 +39,6 @@ mixin cardFindRoom()
           mode: "contained",
           text: "подобрать номер",
           iconname: "arrow_forward",
+          widthpx: 320
         }]
       })
