--- a/src/components/card/__login/card__login.pug
+++ b/src/components/card/__login/card__login.pug
@@ -17,7 +17,8 @@ mixin cardLogin()
             type: "submit",
             mode: "contained",
             text: "войти",
-            iconname: "arrow_forward"
+            iconname: "arrow_forward",
+            widthpx: 320
           }
         ]
       })
@@ -29,6 +30,6 @@ mixin cardLogin()
           buttons: [{
             type: "submit",
             mode: "outlined",
-            text: "создать" 
+            text: "создать"
           }]
         })
