--- a/src/components/card/__registration/card__registration.pug
+++ b/src/components/card/__registration/card__registration.pug
@@ -27,7 +27,8 @@ mixin cardRegistration()
           type: "submit",
           mode: "contained",
           text: "Зарегистрироваться",
-          iconname: "arrow_forward"
+          iconname: "arrow_forward",
+          widthpx: 320
         }]
       })
     form.card-registration__login-section( action="website__login.html" )
