Applied new widthpx parameter to cards inputs

--- a/src/components/card/__find-room/card__find-room.pug
+++ b/src/components/card/__find-room/card__find-room.pug
@@ -12,12 +12,14 @@ mixin cardFindRoom()
           type: "date-picker",
           title: "прибытие",
           hierarchy: "master",
+          widthpx: 150
         })
         +input({
           id: "card-find-room__date-picker_departure",
           type: "date-picker",
           title: "выезд",
           hierarchy: "slave",
+          widthpx: 150
         })
 
     .card-find-room__container-guests-dropdown
