Applied new widthpx parameter to header buttons

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -62,7 +62,7 @@ mixin header( item )
                     buttons: [{
                       type: "submit",
                       mode: "outlined",
-                      widthbypercent: 27,
+                      widthpx: 87,
                       text: "войти"
                     }]
                   })
@@ -72,7 +72,7 @@ mixin header( item )
                     buttons: [{
                       type: "submit",
                       mode: "contained",
-                      widthbypercent: 61,
+                      widthpx: 196,
                       text: "зарегестрироваться"
                     }]
                   })
