Fixed website__landing page

--- a/src/pages/website/__landing/website__landing.pug
+++ b/src/pages/website/__landing/website__landing.pug
@@ -12,6 +12,5 @@ block main
     .landing-page
       .landing-page__card
         +cardFindRoom()
-      .landing-page__note
-        span.custom-font-style_body Лучшие номера для вашей работы, отдыха и просто вдохновения
-
+      .landing-page__note 
+        span.landing-page__note-text Лучшие номера для вашей работы, отдыха и просто вдохновения
